fixed header z-index

--- a/assets/scss/partial/header.scss
+++ b/assets/scss/partial/header.scss
@@ -1,6 +1,7 @@
 .main-header {
     position: sticky;
     top: 0;
+    z-index: 1000;
     width: 100%;
     height: 50px;
     background-color: #d6001c;
